# signa-webodm-plugin

./: .claudeignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  build-plugin.sh  findgcp-webodm.sh
.github/workflows/: ci.yml  publish-signa-core.yml  release.yml  shellcheck.yml
docker/: README.md  docker-compose.findgcp.yml  worker.Dockerfile
docs/: manual-test.md  single-pass-design.md
findgcp/: api.py  gcp_detect.py  manifest.json  marker_pdf.py  params.py  plugin.py  requirements.txt
findgcp/locale/de/LC_MESSAGES/: django.mo  django.po
findgcp/public/: load_buttons.js  style.css
findgcp/templates/: app.html  settings.html
scripts/: compile_messages.py  signa-singlepass.py
signa/: gcp_detect.py  manifest.json  marker_pdf.py  params.py  requirements.txt
signa-core/: CHANGELOG.md  README.md  pyproject.toml
signa-core/signa_core/: __init__.py  detect.py  dictionaries.py  markers.py
signa-core/tests/: test_detect.py  test_markers.py
signa/locale/de/LC_MESSAGES/: django.mo  django.po
signa/public/: load_buttons.js
signa/templates/: settings.html
tests/: test_gcp_detect.py  test_js_dict_drift.py  test_marker_pdf.py  test_params.py  test_translations.py
