[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signa-core"
version = "0.2.2"
description = "Reusable, GUI-free ArUco marker detection + print-ready marker-sheet rendering for the Signa/Evidentia pipeline (OpenCV)."
readme = "README.md"
# 3.9 so it installs inside WebODM (its webapp/worker run Python 3.9); the code
# uses no 3.10+ syntax. Bumped from >=3.10, which blocked the Mensura plugin's
# requirements install in WebODM.
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Patrick Leiverkus", email = "leiverkus@gmail.com" },
]
keywords = ["aruco", "opencv", "marker-detection", "photogrammetry", "archaeology", "evidentia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24",
    "opencv-contrib-python-headless>=4.7",
]

# Pillow is optional: marker-sheet labels use it for a nicer typeface, with an
# OpenCV/Hershey fallback when it is absent (see signa_core.markers.draw_labels).
[project.optional-dependencies]
labels = ["pillow>=9"]

[project.urls]
Repository = "https://github.com/leiverkus/signa"

[tool.hatch.build.targets.wheel]
packages = ["signa_core"]
